# shift-io-rs

./: Cargo.toml  README.md
src/: inout.rs  input.rs  lib.rs  output.rs
